Add mysensors library to arduino.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "modules/phue"]
 	path = modules/phue
 	url = https://github.com/studioimaginaire/phue.git
+[submodule "MySensors"]
+	path = arduino/MySensors
+	url = https://github.com/mysensors/MySensors.git
